some api and plugin changes